--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\salma\AppData\Local\Temp\testng-eclipse--1174122187\testng-customsuite.xml</span>
+                    <span>C:\Users\salma\AppData\Local\Temp\testng-eclipse-1826422375\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,12 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.tricentis.Testcases.HomePageTest" class="method navigator-link" hash-for-method="validateHomePageTitle">validateHomePageTitle</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.tricentis.Testcases.HomePageTest" class="method navigator-link" hash-for-method="validateHomepageLnks">validateHomepageLnks</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.tricentis.Testcases.SendQuoteTest" class="method navigator-link" hash-for-method="QuoteTest">QuoteTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,21 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.tricentis.Testcases.HomePageTest</span>
+              <span class="class-name">com.tricentis.Testcases.SendQuoteTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="validateHomePageTitle">
-                  </a> <!-- validateHomePageTitle -->
-                  <span class="method-name">validateHomePageTitle</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="validateHomepageLnks">
-                  </a> <!-- validateHomepageLnks -->
-                  <span class="method-name">validateHomepageLnks</span>
+                  <a name="QuoteTest">
+                  </a> <!-- QuoteTest -->
+                  <span class="method-name">QuoteTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -148,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\salma\AppData\Local\Temp\testng-eclipse--1174122187\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\salma\AppData\Local\Temp\testng-eclipse-1826422375\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -157,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.tricentis.Testcases.HomePageTest&quot;/&gt;
+      &lt;class name=&quot;com.tricentis.Testcases.SendQuoteTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -197,20 +185,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'validateHomepageLnks')
-data.setCell(0, 2, 'com.tricentis.Testcases.HomePageTest')
-data.setCell(0, 3, 26);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'validateHomePageTitle')
-data.setCell(1, 2, 'com.tricentis.Testcases.HomePageTest')
-data.setCell(1, 3, 11);
+data.setCell(0, 1, 'QuoteTest')
+data.setCell(0, 2, 'com.tricentis.Testcases.SendQuoteTest')
+data.setCell(0, 3, 4529);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 37 ms</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -236,31 +220,15 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.tricentis.Testcases.HomePageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.tricentis.Testcases.SendQuoteTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">validateHomePageTitle</span>
-                <span class="method-start">3938 ms</span>
+                <span class="method-name">QuoteTest</span>
+                <span class="method-start">3901 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">3951 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">4054 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">validateHomepageLnks</span>
-                <span class="method-start">9544 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">9571 ms</span>
-              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
